done with adding new task

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,5 +10,6 @@
 
 $basic-orange: #fbab7e;
 $mild-orange: #f7ce68;
+$strong-orange: rgb(255, 145, 0);
 $orange-linear-gradient: linear-gradient(297.24deg, $basic-orange 0%, $mild-orange 100%);
 $light-gray: #f6f6f6;
