add border radius and change the main app flex sizes

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,15 +1,28 @@
+/* mixins */
 @mixin flex-row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 @mixin flex-column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
+/* variables */
+
+// colors
 $basic-orange: #fbab7e;
 $mild-orange: #f7ce68;
 $strong-orange: rgb(255, 145, 0);
 $orange-linear-gradient: linear-gradient(297.24deg, $basic-orange 0%, $mild-orange 100%);
 $light-gray: #f6f6f6;
+
+// fonts
+$extra-large-font: 48px;
+$large-font: 36px;
+$medium-large-font: 28px;
+$medium-font: 24px;
+$small-medium-font: 18px;
+$small-font: 14px;
+$extra-small-font: 10px;
