advance in layout with percantages of lists

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,7 +22,10 @@ $light-gray: #f6f6f6;
 $extra-large-font: 48px;
 $large-font: 36px;
 $medium-large-font: 28px;
-$medium-font: 24px;
-$small-medium-font: 18px;
-$small-font: 14px;
-$extra-small-font: 10px;
+$medium-font: 22px;
+$small-medium-font: 16px;
+$small-font: 12px;
+$extra-small-font: 8px;
+
+// radius border
+$small-border-radius: 4px;
