adding media queries to app and to header and adding navigation bar

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,3 +29,9 @@ $extra-small-font: 8px;
 
 // radius border
 $small-border-radius: 4px;
+
+// screen sizes
+$mobile: 480px;
+$tablet: 768px;
+$laptop: 1024px;
+$desktops: 1200px;
