--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,7 +16,9 @@ $basic-orange: #fbab7e;
 $mild-orange: #f7ce68;
 $strong-orange: rgb(255, 145, 0);
 $orange-linear-gradient: linear-gradient(297.24deg, $basic-orange 0%, $mild-orange 100%);
-$light-gray: #f6f6f6;
+$light-grey: #f6f6f6;
+$medium-grey: rgb(169,169,169);
+$dark-grey: rgb(104,104,104);
 
 // fonts
 $extra-large-font: 48px;
